@@ -3,6 +3,7 @@ ddetect (0.58) UNRELEASED; urgency=low
   * Joey Hess
     - Remove the bogus "false" from the end of the modprobe error message
       display.
+    - Sort the list of modules for manual selection.
   * Claus Hindsgaul
     - Update da (Danish) translation.
 
